Fixing content link text wrap error

--- a/src/scss/rpta3.scss
+++ b/src/scss/rpta3.scss
@@ -62,10 +62,6 @@
         }
     }
 
-    img {
-        image-rendering: pixelated;
-    }
-
     //=====================================================================================================
     //> Remote server browser
     //=====================================================================================================
